# openstack-on-k8s

./: .gitignore  noxfile.py  requirements.txt  setup.cfg
data/components/cinder/backup/: bc7.Dockerfile
data/components/cinder/ctl/: bc7.Dockerfile
data/components/cinder/volume/: bc7.Dockerfile
data/components/glance/ctl/: bc7.Dockerfile
data/components/mariadb/: bc7.Dockerfile  init.sql
data/components/neutron/server/: bc7.Dockerfile  docker_config.sh
data/components/nova/compute/: bc7.Dockerfile  entrypoint.sh  init-utils.py
data/components/nova/compute_agilio/: bc7.Dockerfile
data/components/nova/consoleauth/: bc7.Dockerfile
data/components/nova/ctl/: BCLinux-Kernel.repo  bc7.Dockerfile  (+4 more)
data/components/registry/: bc7.Dockerfile
data/deployments/: nova-all-in-one.yaml  nova-compute-evbm.yaml  openstack-horizon.yaml
data/deployments/keystone/: deployment.yaml
data/deployments/mariadb/: deployment.yaml
data/deployments/mariadb2/: deployment.yaml
data/deployments/memcached/: deployment.yaml
data/deployments/neutron-ovn/: deployment.yaml
data/deployments/rabbitmq-server/: deployment.yaml
data/deployments/registry/: deployment.yaml
data/deployments/vstackboard/: deployment.yaml
data/resources/: network-containers.servce
data/scripts/: id_rsa  id_rsa.pub  init-utils.py  openstack-init-db.sql  openstack-nova.logrotate
data/services/mariadb/: svc.yaml
etc/: k8stack-template.conf
k8stack/cmd/: ctl.py
k8stack/common/: conf.py  exceptions.py  i18n.py  registry_api.py  utils.py
k8stack/common/container/: __init__.py  impl.py
(+16 files in other folders)
