[metadata]
name = k8stack
summary = Opensack On K8s
author = fjboy
author_email = 2535463841@qq.com
home_page = https://github.com/fjboy/openstack-on-k8s

# [global]
# setup-hooks =
#     k8stack.hooks.setup_hook

[files]
packages =
    k8stack


[entry_points]
console_scripts =
    vstackboard = k8stack.cmd.k8stack:main
